--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/material": "^10.34.0",
     "next": "^12.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
